
Severity   : normal
Frequency  : patchless clients only
Bugzilla   : 12391
Description: missing __iget() symbol export
Details    : The __iget() symbol export is missing.  To avoid the need for
	     this on patchless clients the deathrow inode reaper is turned
	     off, and we depend on the VM to clean up old inodes.  This
	     dependency was during via the fix for bug 12181.

--------------------------------------------------------------------------------

2007-04-19  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.0
       * CONFIGURATION CHANGE.  This version of Lustre WILL NOT
	 INTEROPERATE with older versions automatically.  In many cases a
	 special upgrade step is needed. Please read the
	 user documentation before upgrading any part of a 1.4.x system.
       * WARNING: Lustre configuration and startup changes are required with
	 this release.  See https://mail.clusterfs.com/wikis/lustre/MountConf
	 for details.
       * Support for kernels:
        2.4.21-47.0.1.EL (RHEL 3)
        2.6.5-7.283 (SLES 9)
        2.6.9-42.0.10.EL (RHEL 4)
        2.6.12.6 vanilla (kernel.org)
        2.6.16.27-0.9 (SLES10)
       * Client support for unpatched kernels:
        (see https://mail.clusterfs.com/wikis/lustre/PatchlessClient)
        2.6.16 - 2.6.19 vanilla (kernel.org)
        2.6.9-42.0.8EL (RHEL 4)
       * Recommended e2fsprogs version: 1.39.cfs6
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel
       * bug fixes

Severity   : enhancement
Bugzilla   : 8007
Description: MountConf
Details    : Lustre configuration is now managed via mkfs and mount
	     commands instead of lmc and lconf.  New obd types (MGS, MGC)
	     are added for dynamic configuration management.  See
	     https://mail.clusterfs.com/wikis/lustre/MountConf for
	     details.

Severity   : enhancement
Bugzilla   : 4482
Description: dynamic OST addition
Details    : OSTs can now be added to a live filesystem

Severity   : enhancement